--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A MERN stack time tracking app",
   "main": "server.js",
   "scripts": {
-    "serve": "node src/backend/server.js",
+    "serve": "nodemon src/backend/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "setup": "npm ci"
   },
