--- a/package.json
+++ b/package.json
@@ -4,18 +4,12 @@
   "description": "A MERN stack time tracking app",
   "main": "server.js",
   "scripts": {
-    "serve": "nodemon src/backend/server.js",
+    "serve": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "setup": "npm ci"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mongodb": "^5.1.0",
-    "nodemon": "^2.0.20"
-  }
+  "dependencies": {}
 }
