--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "serve": "node backend/server.js",
     "nodemon": "nodemon backend/server.js",
+    "client": "npm start --prefix frontend",
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
@@ -21,6 +22,7 @@
     "mongoose": "^7.0.0"
   },
   "devDependencies": {
+    "jasmine": "^4.5.0",
     "nodemon": "^2.0.21"
   }
 }
