--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "nodemon": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "check": "npx prettier --check .",
+    "prettify": "npx prettier --write .",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "",
