--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "node backend/server.js",
     "nodemon": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run nodemon\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "check": "npx prettier --check .",
     "prettify": "npx prettier --write .",
@@ -24,6 +25,7 @@
     "mongoose": "^7.0.0"
   },
   "devDependencies": {
+    "concurrently": "^7.6.0",
     "jasmine": "^4.5.0",
     "nodemon": "^2.0.21",
     "prettier": "2.8.4"
