--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A MERN stack time tracking app",
   "main": "server.js",
   "scripts": {
-    "serve": "node backend/server.js",
+    "start": "node backend/server.js",
     "nodemon": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run nodemon\" \"npm run client\"",
