--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "mobile",
-  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -9,15 +7,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.9",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.4",
-    "react-native-web": "~0.18.10",
-    "react-dom": "18.2.0"
+    "expo": "~46.0.19",
+    "expo-status-bar": "~1.4.0",
+    "react": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-screens": "~3.15.0",
+    "@react-navigation/stack": "*",
+    "@react-navigation/native": "*",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-safe-area-context": "4.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
