--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,7 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "expo-font": "~10.2.0",
     "react-native-screens": "~3.15.0",
     "@react-navigation/stack": "*",
     "@react-navigation/native": "*",
