--- a/.envexample
+++ b/.envexample
@@ -2,6 +2,8 @@ NODE_ENV = development
 PORT = 5000
 MONGO_URI = <your mongo cluster>
 JWT_SECRET = <your JWT secret>
+SALT_ROUNDS = 10
+CLIENT_URL = <https://your.website>
 EMAIL_PORT = 465
 EMAIL_HOST = <your email host>
 EMAIL_USERNAME = <your email username>
