--- a/.envexample
+++ b/.envexample
@@ -1,10 +1,9 @@
 NODE_ENV = development
 PORT = 5000
 MONGO_URI = <your mongo cluster>
+MAILGUN_API_KEY = <your mailgun API key>
+MAILGUN_DOMAIN = <your mailgun domain>
+FROM_EMAIL = <your reply email>
 JWT_SECRET = <your JWT secret>
 SALT_ROUNDS = 10
 CLIENT_URL = <https://your.website>
-EMAIL_PORT = 465
-EMAIL_HOST = <your email host>
-EMAIL_USERNAME = <your email username>
-EMAIL_PASSWORD = <your email password>
