--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "express-async-handler": "^1.2.0",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.0",
-    "nodemailer": "^6.9.1"
+    "mailgun-js": "^0.22.0",
+    "mongoose": "^7.0.0"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
