--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "nodemon": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run nodemon\" \"npm run client\"",
-    "test": "jasmine .\\spec\\UserSimulation.spec.js",
+    "test": "jasmine",
     "check": "npx prettier --check .",
     "prettify": "npx prettier --write .",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
