--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.2.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "heroku": "^8.0.2",
+    "heroku": "^7.7.8",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.0"
+    "mongoose": "^7.0.0",
+    "react-bootstrap": "^2.7.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
