--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^9.0.0",
     "mailgun-js": "^0.22.0",
-    "mongoose": "^7.0.0"
+    "mongoose": "^7.0.0",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
