--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "heroku": "^8.0.2",
     "handlebars": "^4.7.7",
+    "heroku": "^8.0.2",
     "jsonwebtoken": "^9.0.0",
     "mailgun-js": "^0.22.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.0.0"
   },
   "devDependencies": {
