--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,7 @@
     "react": "18.0.0",
     "react-native": "0.69.9",
     "expo-font": "~10.2.0",
+    "expo-secure-store": "~11.3.0",
     "react-native-screens": "~3.15.0",
     "@react-navigation/stack": "*",
     "@react-navigation/native": "*",
